syntax = "proto3";
package diferredack.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/msg/v1/msg.proto";
import "ibc/core/channel/v1/channel.proto";
import "ibc/applications/transfer/v2/packet.proto";

option go_package = "union/x/diferredack/types";

// Msg defines the diferredack module's gRPC message service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc WriteDiferredAck(MsgWriteDiferredAck) returns (MsgWriteDiferredAckResponse);
}

message MsgWriteDiferredAck {
  option (cosmos.msg.v1.signer) = "sender";

  string                                               sender             = 1 [ (gogoproto.moretags) = "yaml:\"sender\"" ];
  DiferredPacketInfo                                   diferredPacketInfo = 2;
  ibc.core.channel.v1.Acknowledgement                  ack                = 3;
}

message MsgWriteDiferredAckResponse {
  
}

message DiferredPacketInfo {
  string original_sender_address  = 1;
  string refund_channel_id        = 2;
  string refund_port_id           = 3;
  string packet_src_channel_id    = 4;
  string packet_src_port_id       = 5;
  uint64 packet_timeout_timestamp = 6;
  string packet_timeout_height    = 7;
  bytes  packet_data              = 8;
  uint64 sequence                 = 9;
  uint64 timeout                  = 10;
  bool   nonrefundable            = 11;
}
